refactor(translate): global shared chat history with viewer sets
  Replaces the per-player Map<UUID, List<TranslateHistoryMessage>> with a
  single time-ordered global list plus a viewer set on each entry. A message
  seen by N players is stored once with a N-sized viewer set instead of N
  duplicated entries with their own Component trees.

  Memory: on a 100-player server with 100 messages of history, drops from
  ~10000 entries to ~100. Component tree (the heaviest field) is shared.

  Per-player toggle state (showOriginal) was previously a field on each
  history entry — now lives in a separate map TranslateModule.playerOriginalToggles:
  Map<playerUUID, Set<messageUUID>>. A player's set contains the message UUIDs
  they've flipped to 'show original'.

  TranslateHistoryMessage.getDisplayComponent now takes showOriginal as a
  parameter (passed by sendUpdate from the player's toggle set) instead of
  reading it off the record.

  save() looks up by UUID and adds receiver to viewers if the entry already
  exists (one Component per message, no duplication on per-receiver save).
  sendUpdate() filters globalHistory by viewer membership before drawing.
  clearHistory() on player quit removes them from every viewer set and drops
  their toggle map; entries themselves stay for other players.

  FIFO trim of the oldest when globalHistory > historyLength().